--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ body {
     color: #162938;
 }
 
-.menu-btn {
+.loginmb {
     display: none;
 }
 
@@ -106,8 +106,56 @@ body {
         justify-content: flex-end; 
     }
 
+    .navigation .btnLogin-popup {
+        display: none;
+    }
+
+    .navigation .btnRegister {
+        width: 130px;
+        height: 50px;
+        background: #fff;
+        border: 2px solid #fff;
+        border-radius: 6px;
+        font-size: 1.1em;
+        color: #162938;
+        font-weight: 500;
+        margin-left: 40px;
+        cursor: pointer;
+        transition: .5s;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .loginmb {
+        display: block;
+    }
+    .btnRegister i {
+        margin-right: 8px;
+        font-size: 1.2em;
+    }
+    
+    .btnRegister:hover {
+        background: #ffdd57;
+        color: #162938;
+    }
+
+    /* Расширение кнопки Register в мобильном меню */
+    .navigation.active .btnRegister {
+        display: block;
+        width: calc(100% - 40px);
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 15px;
+        text-align: center;
+    }
     .logo {
-        display: none; 
+        font-size: 28px;
+        color: #fff;
+        user-select: none;
+        text-decoration: none;
+        position: static;  
+        margin-right: auto;
     }
 
     .navigation {
