--- a/css/login.css
+++ b/css/login.css
@@ -380,6 +380,7 @@ ul {
         justify-content: center;
         align-items: center;
     }
+
     .loginmb {
         display: block;
     }
@@ -437,5 +438,29 @@ ul {
     .navigation a {
         margin: 10px 0;
         font-size: 1.5em;
+    }
+}
+
+@media (max-width: 520px) {
+    .wrapper {
+        position: relative;
+        width: 360px;
+        height: 400px;
+        margin-top: -25px;
+        background: transparent;
+        border: 2px solid rgba(255,255,255, .5);
+        border-radius: 20px;
+        backdrop-filter: blur(200px);
+        box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        transition: height .2s ease;
+        
+    }
+
+    .footer {
+        display: none;
     }
 }
