--- a/css/login.css
+++ b/css/login.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100%;
     background: linear-gradient(135deg, #000000f1 0%, #2c2c2c 300%);
     color: #ffffff; 
     margin: 0; 
@@ -101,6 +101,7 @@ body {
     position: relative;
     width: 440px;
     height: 500px;
+    top: 275px;
     margin-top: -150px;
     background: transparent;
     border: 2px solid rgba(255,255,255, .5);
@@ -363,6 +364,24 @@ ul {
         display: none;
     }
 
+    .wrapper {
+        position: relative;
+        width: 360px;
+        height: 400px;
+        margin-top: -200px;
+        background: transparent;
+        border: 2px solid rgba(255,255,255, .5);
+        border-radius: 20px;
+        backdrop-filter: blur(200px);
+        box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        transition: height .2s ease;
+        
+    }
+
     .navigation .btnRegister {
         width: 130px;
         height: 50px;
@@ -394,7 +413,6 @@ ul {
         color: #162938;
     }
 
-    /* Расширение кнопки Register в мобильном меню */
     .navigation.active .btnRegister {
         display: block;
         width: calc(100% - 40px);
@@ -444,6 +462,7 @@ ul {
 @media (max-width: 830px) {
     .wrapper {
         position: relative;
+        top: 100px;
         width: 360px;
         height: 400px;
         margin-top: -25px;
