--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,23 @@ body {
     .navigation .btnLogin-popup {
         display: none;
     }
-
+    .wrapper {
+        position: relative;
+        width: 380px;
+        height: 420px;
+        margin-top: -200px;
+        background: transparent;
+        border: 2px solid rgba(255,255,255, .5);
+        border-radius: 20px;
+        backdrop-filter: blur(200px);
+        box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        transition: height .2s ease;
+        
+    }
     .navigation .btnRegister {
         width: 130px;
         height: 50px;
