--- a/css/login.css
+++ b/css/login.css
@@ -270,6 +270,7 @@ ul {
     padding: 50px 0;
     position: fixed;
     bottom: 0;
+    text-align: center;
     left: 0;
     width: 100%;
     padding: 20px;
