--- a/css/login.css
+++ b/css/login.css
@@ -272,9 +272,8 @@ ul {
 .footer {
     background-color: #202020d5;
     padding: 50px 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    height: 200px;
     text-align: center;
     left: 0;
     width: 100%;
@@ -287,7 +286,6 @@ ul {
     flex-wrap: wrap;
     margin-left: 250px;
 }
-
 .footer-col {
     width: 25%;
     padding: 0 15px;
@@ -387,31 +385,6 @@ ul {
         overflow: hidden;
         transition: height .2s ease;
         
-    }
-
-    .footer-rights {
-        text-align: right;
-        font-size: 12px;
-        color: #aaa;
-    }
-    
-    .footer {
-        background-color: #202020d5;
-        padding: 50px 0;
-        position: absolute;
-        bottom: -180px;
-        height: 180px;
-        text-align: center;
-        left: 0;
-        width: 100%;
-        padding: 20px;
-        
-    }
-
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: 200px;
     }
 
     .navigation .btnRegister {
@@ -574,34 +547,10 @@ ul {
         width: 200px; 
     }
 
-    .footer-rights {
+    .footer {
         display: none;
     }
-    
-    .footer {
-        background-color: #202020d5;
-        padding: 50px 0;
-        position: absolute;
-        bottom: -260px;
-        height: 240px;
-        text-align: center;
-        left: 0;
-        width: 100%;
-        padding: 20px;
-        
+    .foote-col {
+        display: none;
     }
-    
-    .footer-col {
-        width: 25%;
-        padding: 0 10px;
-    }
-    
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between; /* Равномерное распределение колонок */
-        margin-left: 85px;
-        transform: translateX(-50px);
-    }
-    
 }
